<resources>
    <string name="app_name">Webcam Image Capture</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Webcam Image Capture</string>
    <string name="second_fragment_label">Add webcam URL</string>
    <string name="third_fragment_label">Edit webcam URL</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="additembutton">addItemButton</string>
    <string name="imagecapture">imageCapture</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="enter_url_and_nickname">Enter URL and nickname</string>
    <string name="prefFileName">org.jshobbysoft.PREF_FILE_KEY</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="url">URL</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Full Screen</string>
    <string name="fullscreenfragmentname">Full Screen</string>
    <string name="share">SHARE</string>
    <string name="save_menu">SAVE</string>
    <string name="download_menu">DOWNLOAD</string>
</resources>